# diarry-

./: README.md  app.py  data.txt  pyproject.toml
static/css/: app.css
templates/: auth.html  entry.html  index.html
templates/main/: index.html
