[tool.poetry]
name = "journal"
version = "0.1.0"
description = "journal"
authors = ["afheisleycook"]
license = "gplv3"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
mysql = "^0.0.3"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
